syntax = "proto3";

package pad.services.cache.services.cache;

option go_package = "pad/services/cache/services/cache";

import "google/protobuf/empty.proto";

service Cache {
  rpc AddListing(AddListingRequest) returns (google.protobuf.Empty) {}
  rpc GetListingByTitle(GetListingByTitleRequest) returns (GetListingByTitleResponse) {}
  rpc GetListingByID(GetListingByIDRequest) returns (GetListingByIDResponse) {}
  rpc Heartbeat(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message AddListingRequest {
  Listing listing = 1;
  uint32 id = 2;
}

message GetListingByTitleRequest {
  string title = 1;
}

message GetListingByTitleResponse {
  Listing listing = 1;
}

message GetListingByIDRequest {
  uint32 id = 1;
}

message GetListingByIDResponse {
  Listing listing = 1;
}

message Listing {
  string title = 1;
  string description = 2;
  string thumbnail_url = 3;
}
